--- a/create.html
+++ b/create.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     Hello World!!!
-    <h1 style = "color: red;">Yash Tailor u r boss of mine!!</h1>
+    <h1 style = "color: red;">Yash Tailor u r boss of mine..</h1>
     <b>This is Bold style font</b>
 </body>
 </html>
